# pockingbird

./: CONTEXT.md  Cargo.toml  LICENSE  PLAN.md  README.md  TODO.md  pockingbird.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  release.yml
fixtures/en/LC_MESSAGES/: messages.po
fixtures/es/LC_MESSAGES/: messages.po
fixtures/id/LC_MESSAGES/: messages.po
fixtures/pt/LC_MESSAGES/: messages.po
fixtures/ru/LC_MESSAGES/: messages.po
fixtures/tr/LC_MESSAGES/: messages.po
src/: cli.rs  config.rs  fuzzy.rs  group.rs  index.rs  lib.rs  locale.rs  main.rs  normalize.rs  pipeline.rs  po.rs  report.rs  walk.rs
tests/: facade.rs  integration.rs
