[package]
name = "pockingbird"
version = "0.1.0"
edition = "2021"
description = "Report-only CLI that finds duplicate translation keys across gettext .po catalogs"
license = "MIT"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:colored"]

[[bin]]
name = "pockingbird"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
polib = "0.2"
ignore = "0.4"
globset = "0.4"
rayon = "1"
strsim = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

clap = { version = "4", features = ["derive"], optional = true }
colored = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unused = "warn"

[lints.clippy]
all = "warn"
