[package]
name = "pockingbird"
version = "0.1.1"
edition = "2021"
authors = ["Kira Kurentsov <immortalsteel@gmail.com>"]
description = "Report-only CLI that finds duplicate translation keys across gettext .po catalogs"
repository = "https://github.com/Segodnya/pockingbird"
homepage = "https://github.com/Segodnya/pockingbird"
documentation = "https://docs.rs/pockingbird"
readme = "README.md"
license = "MIT"
keywords = ["gettext", "i18n", "localization", "po", "duplicate"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:colored"]

[[bin]]
name = "pockingbird"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
polib = "0.2"
ignore = "0.4"
globset = "0.4"
rayon = "1"
strsim = "0.11"
unicode-properties = { version = "0.1", features = ["general-category"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

clap = { version = "4", features = ["derive"], optional = true }
colored = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
# Auto-installs the hooks in .cargo-husky/hooks/ into .git/hooks on first build
# of dev-deps (e.g. `cargo test`), so no manual `git config` step is needed.
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[lints.rust]
unused = "warn"

[lints.clippy]
all = "warn"
